# flangee77

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props.dist  LICENSE  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  custom.css  dir_000000_000001.html  dir_000000_000003.html  dir_000001_000011.html  dir_000001_000012.html  dir_000001_000013.html  dir_000001_000014.html  dir_000001_000019.html  dir_000001_000020.html  dir_000001_000021.html  dir_000001_000024.html  dir_000001_000031.html  dir_000001_000035.html  dir_000002_000004.html  dir_000002_000006.html  dir_000002_000019.html  dir_000003_000000.html  dir_000003_000001.html  dir_000003_000004.html  dir_000003_000020.html  dir_000003_000039.html  dir_000003_000043.html  dir_000003_000044.html  (+1818 more)
HelloWorld/: CMakeLists.txt  HelloWorld.rc  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  resource.h  targetver.h
HelloWorld/assets/gfx/: dummy-compressed.tga  dummy-p1.pbm  dummy-p2.pgm  dummy-p3.ppm  dummy-p4.pbm  dummy-p5.pgm  dummy-p6.ppm  dummy-p7.pam  dummy.tga
HelloWorld/assets/shaders/: shader.hlsl
HelloWorld/src/: CMakeLists.txt  HelloWorld.cpp  MyApp.cpp  MyApp.h  framework.h  targetver.h
flangee77/: CMakeLists.txt  flangee77.vcxitems  flangee77.vcxproj  flangee77.vcxproj.filters
flangee77-tests/: CMakeLists.txt  flangee77-tests.vcxproj  flangee77-tests.vcxproj.filters
flangee77-tests/assets/shaders/: shader.hlsl
flangee77-tests/src/: .clang-tidy  CMakeLists.txt  flangee77-tests.cpp  shared.h
flangee77-tests/src/AlgoLabs/: math.cpp  math.h
flangee77-tests/src/CoreLabs/: Base64.h  Guid.cpp  Guid.h  Version.cpp  Version.h  bits.cpp  bits.h  bytes.cpp  bytes.h  memory.cpp  memory.h  ordered_map.cpp  ordered_map.h  static_vector.cpp  static_vector.h  strings.h  utilities.cpp  utilities.h
flangee77-tests/src/DataLabs/: Base64.cpp  Base64.h  Buffer1D.h  Buffer1d.cpp  Buffer1d.h  Buffer2D.h  Buffer2d.cpp  Buffer2d.h  Buffer3D.h  Buffer3d.cpp  Buffer3d.h  compression.cpp  compression.h  ini.cpp  ini.h  json.cpp  json.h  syntax.cpp  syntax.h  xml.cpp  xml.h
flangee77-tests/src/MathLabs/: Angle.cpp  Angle.h  CubicBezier2.cpp  CubicBezier2.h  CubicBezier3.cpp  CubicBezier3.h  Line2.cpp  Line2.h  Line3.cpp  Line3.h  LineSegment2.cpp  LineSegment2.h  LineSegment3.cpp  LineSegment3.h  Matrix2x2.cpp  Matrix2x2.h  Matrix2x3.cpp  Matrix2x3.h  Matrix3x3.cpp  Matrix3x3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4x4.cpp  Matrix4x4.h  QuadraticBezier2.cpp  QuadraticBezier2.h  QuadraticBezier3.cpp  QuadraticBezier3.h  Quaternion.cpp  Quaternion.h  Ray2.cpp  Ray2.h  Ray3.cpp  Ray3.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  (+11 more)
flangee77-tests/src/ProgLabs/: ArgumentBag.cpp  ArgumentBag.h
flangee77-tests/src/XiaoLabs/: general.cpp  general.h  graphics.h  shared.h
flangee77/src/: CMakeLists.txt
flangee77/src/AlgoLabs/: CMakeLists.txt
flangee77/src/CoreLabs/: Base64.cpp  Base64.h  CMakeLists.txt  Guid.cpp  Guid.h  Version.cpp  Version.h  VersionedId.h  auto_invoke.h  bits.cpp  bits.h  byte_buffer.cpp  byte_buffer.h  byte_span.h  byte_vector.h  byte_view.h  bytearray.cpp  bytearray.h  bytes.h  errors.cpp  errors.h  filesystem.cpp  filesystem.h  fstream.h  functional.h  io.h  iterator.h  iterators.h  logging.cpp  logging.h  memory.cpp  memory.h  ordered_map.h  profiling.h  root.cpp  root.h  sstream.cpp  sstream.h  static_vector.h  string.cpp  (+5 more)
flangee77/src/DataLabs/: Base64.cpp  (+9 more)
(+9269 files in other folders)
